--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   fl_chart: ^1.1.1
   flutter_animate: ^4.5.2
   shimmer: ^3.0.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
