--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_animate: ^4.5.2
   shimmer: ^3.0.0
   dartz: ^0.10.1
+  supabase_flutter: ^2.12.0
 
 dev_dependencies:
   flutter_test:
