--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   shimmer: ^3.0.0
   dartz: ^0.10.1
   supabase_flutter: ^2.12.0
+  retrofit: ^4.9.2
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,7 @@ dev_dependencies:
   injectable_generator: ^2.12.0
   drift_dev: ^2.30.1
   mocktail: ^1.0.4
+  retrofit_generator: ^10.2.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
