--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   dartz: ^0.10.1
   supabase_flutter: ^2.12.0
   retrofit: ^4.9.2
+  json_annotation: ^4.9.0
+  flutter_markdown: ^0.7.7+1
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +74,7 @@ dev_dependencies:
   drift_dev: ^2.30.1
   mocktail: ^1.0.4
   retrofit_generator: ^10.2.1
+  json_serializable: ^6.11.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
